--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -3,7 +3,7 @@ name = "melodyrust"
 version = "0.0.0"
 description = "Music Player ++ "
 authors = ["kernel.rb"]
-license = "MIT/Apache-2.0"
+license = ""
 repository = "https://github.com/Kernel-rb/MelodyRust"
 edition = "2021"
 
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [ "shell-open"] }
+tauri = { version = "1.5", features = [ "system-tray", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
