--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "melodyrust"
-version = "0.0.1"
+version = "0.0.0"
 description = "Music Player ++ "
 authors = ["kernel.rb"]
 license = ""
@@ -13,9 +13,12 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [ "app-all", "shell-open", "system-tray"] }
+tauri = { version = "1.5", features = [ "notification-all", "http-all", "app-all", "shell-open", "system-tray" ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+reqwest = "0.11"
+tokio = { version = "1", features = ["full"] }
+regex = "1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
